test/corpus/main.txt
================================================================================
Arrays
================================================================================

b = [
  345,
  10.1,
  10,
  -10,
  null,
  true,
  false,
  { "stuff": "good" },
  [ false ]
]

--------------------------------------------------------------------------------

(document
  (pair
    key: (identifier)
    value: (array
      (number)
      (number)
      (number)
      (number)
      (null)
      (true)
      (false)
      (object
        (pair
          key: (string
            (string_content))
          value: (string
            (string_content))))
      (array
        (false)))))

================================================================================
String content
================================================================================

a: [
  "",
  "abc",
  "def\n",
  "ghi\t",
  "jkl\f",
  "//",
  "/**/"
]

--------------------------------------------------------------------------------

(document
  (pair
    key: (identifier)
    value: (array
      (string)
      (string
        (string_content))
      (string
        (string_content)
        (escape_sequence))
      (string
        (string_content)
        (escape_sequence))
      (string
        (string_content)
        (escape_sequence))
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
Top-level numbers
================================================================================

a: -1

--------------------------------------------------------------------------------

(document
  (pair
    key: (identifier)
    value: (number)))

================================================================================
Top-level null
================================================================================

a: null

--------------------------------------------------------------------------------

(document
  (pair
    key: (identifier)
    value: (null)))

================================================================================
Comments
================================================================================

"a": 1,

// we allow comments, because several
// commonly used tools allow comments in
// files with the extension `.json`
"b": "2",

/*
* Block comments are also ok
*/
"c": 3

--------------------------------------------------------------------------------

(document
  (pair
    (string
      (string_content))
    (number))
  (comment)
  (comment)
  (comment)
  (pair
    (string
      (string_content))
    (string
      (string_content)))
  (comment)
  (pair
    (string
      (string_content))
    (number)))

===========================================
Multiple top-level objects
===========================================

a: {}
b: {}

---

(document
  (pair
    key: (identifier)
    value: (object))
  (pair
    key: (identifier)
    value: (object)))

===========================================
More complex example
===========================================

// comments
unquoted: 'and you can quote me on that'
singleQuotes: 'I can use "double quotes" here'
lineBreaks: "Look, Mom! \
No \\n's!"
hexadecimal: 0xdecaf
leadingDecimalPoint: .8675309, andTrailing: 8675309.
positiveSign: +1
trailingComma: 'in objects', andIn: ['arrays',]
"backwardsCompatible": "with JSON"

---

(document
  (comment)
  (pair
    key: (identifier)
    value: (string
      (string_content)))
  (pair
    key: (identifier)
    value: (string
      (string_content)))
  (pair
    key: (identifier)
    value: (string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)))
  (pair
    key: (identifier)
    value: (number))
  (pair
    key: (identifier)
    value: (number))
  (pair
    key: (identifier)
    value: (number))
  (pair
    key: (identifier)
    value: (number))
  (pair
    key: (identifier)
    value: (string
      (string_content)))
  (pair
    key: (identifier)
    value: (array
      (string
        (string_content))))
  (pair
    key: (string
      (string_content))
    value: (string
      (string_content))))
